# q2-feature-classifier

./: .copier-answers.yml  .gitignore  Makefile  pyproject.toml
conda-recipe/: meta.yaml
q2_feature_classifier/: __init__.py  _blast.py  _consensus_assignment.py  _cutter.py  _skl.py  _taxonomic_classifier.py  _vsearch.py  classifier.py  custom.py  plugin_setup.py
q2_feature_classifier/tests/: __init__.py  test_classifier.py  test_consensus_assignment.py  test_custom.py  test_cutter.py  test_taxonomic_classifier.py
q2_feature_classifier/types/: __init__.py  _format.py  _type.py
